--- a/package.json
+++ b/package.json
@@ -1,38 +1,1 @@
-{
-  "name": "lama-dev-next-dashboard",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@types/react-big-calendar": "^1.8.9",
-    "axios": "^1.8.2",
-    "lama-dev-next-dashboard": "file:",
-    "leaflet": "^1.9.4",
-    "moment": "^2.30.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-big-calendar": "^1.13.2",
-    "react-calendar": "^5.0.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.2",
-    "react-leaflet": "^5.0.0",
-    "recharts": "^2.12.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "20.17.23",
-    "@types/react": "18.3.18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.8.2"
-  }
-}
+{"type": "commonjs"}
